--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,15 +1,20 @@
 html,
 body {
-  padding: 0;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-color: rgb(250, 250, 250);
+    text-align: center;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
+
+
 
 * {
   box-sizing: border-box;
