--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,21 +1,26 @@
 html,
 body {
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background-color: rgb(250, 250, 250);
-    text-align: center;
+	width: 100vw;
+	height: 100vh;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+		Helvetica Neue, sans-serif;
+	background-color: rgb(250, 250, 250);
+	text-align: center;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
-
-
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+@media (max-width: 298px) {
+	#__next,
+	#home {
+		width: fit-content;
+	}
 }
