--- a/comps/Chart/Chart.module.css
+++ b/comps/Chart/Chart.module.css
@@ -1,1 +1,65 @@
+.globalLineChart {
+	padding: 1rem;
+	height: 40rem;
+	width: 100%;
+}
 
+@media (min-width: 1023) {
+	.globalLineChart {
+		padding: 1rem;
+		height: 600px;
+		width: 100%;
+	}
+}
+
+@media (max-width: 768px) {
+	.globalLineChart {
+		padding: 1rem;
+		height: 300px;
+		width: 100%;
+	}
+}
+
+.countryHistData {
+	padding: 1rem;
+	height: 40rem;
+	width: 100%;
+}
+
+@media (min-width: 1023) {
+	.countryHistData {
+		padding: 1rem;
+		height: 600px;
+		width: 100%;
+	}
+}
+
+@media (max-width: 768px) {
+	.countryHistData {
+		padding: 1rem;
+		height: 300px;
+		width: 100%;
+	}
+}
+
+.currentData {
+	padding: 1rem;
+	height: 40rem;
+	width: 100%;
+}
+
+@media (min-width: 1023) {
+	.currentData {
+		padding: 1rem;
+		height: 600px;
+		width: 100%;
+	}
+}
+
+@media (max-width: 768px) {
+	.currentData {
+		padding: 1rem;
+		height: 300px;
+		width: 100%;
+	}
+}
