--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 html,
 body {
 	width: 100vw;
-	height: 100vh;
+
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
 		Helvetica Neue, sans-serif;
@@ -16,6 +16,12 @@ a {
 
 * {
 	box-sizing: border-box;
+}
+
+@media (min-width: 767px) {
+	#__next {
+		padding: 2rem;
+	}
 }
 
 @media (max-width: 298px) {
